--- a/cssGrid.html
+++ b/cssGrid.html
@@ -8,19 +8,18 @@
 </head>
 <body>
     
-    <div id="grid-container">
-        <section  id="grid-item" class="grid-element"> Care Bears </element>
-        <img id="grid-img1" class="grid-element" alt="bear-image1" src="./src/img/1.png">
-        <img id="grid-img2" class="grid-element" alt="bear-image2" src="./src/img/2.png">
-        <img id="grid-img3" class="grid-element" alt="bear-image3" src="./src/img/3.png">
-        <img id="grid-img4" class="grid-element" alt="bear-image4" src="./src/img/4.png">
-        <img id="grid-img5" class="grid-element" alt="bear-image5" src="./src/img/5.png">
-        <img id="grid-img6" class="grid-element" alt="bear-image6" src="./src/img/6.png">
-        <img id="grid-img7" class="grid-element" alt="bear-image7" src="./src/img/7.png">
-        <img id="grid-img8" class="grid-element" alt="bear-image8" src="./src/img/8.png">
-        <img id="grid-img9" class="grid-element" alt="bear-image9" src="./src/img/9.png">
-        <img id="grid-img10" class="grid-element" alt="bear-image10" src="./src/img/10.png">
-        
+    <div class="grid-container">
+        <div type="grid-item" class="item item1"><p id="grid-text" > Care Bears </p></div>
+        <div type="grid-item" class="item item2"><img alt="bear-image1" src="./src/img/1.png"></div>
+        <div type="grid-item" class="item item3"><img alt="bear-image2" src="./src/img/2.png"></div>
+        <div type="grid-item" class="item item4"><img alt="bear-image3" src="./src/img/3.png"></div>
+        <div type="grid-item" class="box5"><img alt="bear-image4" src="./src/img/4.png"></div>
+        <div type="grid-item" class="box6"><img alt="bear-image5" src="./src/img/5.png"></div>
+        <div type="grid-item" class="box7"><img alt="bear-image6" src="./src/img/6.png"></div>
+        <div type="grid-item" class="box8"><img alt="bear-image7" src="./src/img/7.png"></div>
+        <div type="grid-item" class="box9"><img alt="bear-image8" src="./src/img/8.png"></div>
+        <div type="grid-item" class="box10"><img alt="bear-image9" src="./src/img/9.png"></div>
+        <div type="grid-item" class="box11"><img alt="bear-image10" src="./src/img/10.png"></div>
     </div>
 </body>
 </html>
